--- a/styles/map.css
+++ b/styles/map.css
@@ -20,7 +20,7 @@ fieldset
     justify-content: space-evenly;
     align-items: center;
 }
-#submit {
+#confirm_BTN {
     width: 100px;
     height: 60px;
     border: none;
@@ -33,20 +33,6 @@ fieldset
     width: 105px;
     height: 63px;
 }
-
-
-#no {
-
-
-}
-#yes {
-
-}
-.confirm-location {
-
-}
-
-
 
 #issmap{
     height: 480px;
