new features darkMode Login Page

--- a/styles/rule1.css
+++ b/styles/rule1.css
@@ -1,14 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&family=Open+Sans:ital,wght@0,600;1,500&family=Poppins:wght@100&family=Roboto:wght@400;700&display=swap');
-:root 
-{
-  --main-orange: hsl(26, 100%, 55%);
-  --pale-orange:hsl(25, 100%, 94%);
-  --Very-dark-blue: hsl(220, 13%, 13%);
---Dark-grayish-blue: hsl(219, 9%, 45%);
---Grayish-blue: hsl(220, 14%, 75%);
---Light-grayish-blue: hsl(223, 64%, 98%);
---White: hsl(0, 0%, 100%);
-}
 body
 {
     margin: 0;
@@ -22,6 +12,34 @@ body p{
 body h2 {
   font-weight: 700;
 
+}
+
+.dark-theme {
+  background-color: black;
+  color: white;
+}
+.toggleButton{
+  margin: 0% 1% 0% 0%;
+  cursor: pointer;
+}
+.toggleButton img {
+  width: 80%;
+}
+
+.login {
+  width: 10%;
+  margin: 0% 0% 0% 2%;
+  cursor: pointer;
+}
+
+.login img {
+  width: 35%;
+  margin: 1% 0% 2% -1%;
+
+}
+.login .login-txt {
+  font-weight: 700;
+  margin: 0% 0% 10% 0%;
 }
 
 .payment-Methods {
@@ -105,6 +123,18 @@ body h2 {
   color: var(--main-orange);
 }
 
+
+:root 
+{
+  --main-orange: hsl(26, 100%, 55%);
+  --pale-orange:hsl(25, 100%, 94%);
+  --Very-dark-blue: hsl(220, 13%, 13%);
+--Dark-grayish-blue: hsl(219, 9%, 45%);
+--Grayish-blue: hsl(220, 14%, 75%);
+--Light-grayish-blue: hsl(223, 64%, 98%);
+--White: hsl(0, 0%, 100%);
+}
+
 .popup {
   display: block;
   width: 100%;
@@ -168,10 +198,8 @@ body h2 {
 {
   width: 100%;
   height: 100px;
-  background-color: var(--White);
   display: flex;
   align-items: center;
-  transition: all 3s;
 }
 .container-bar
 {
@@ -189,6 +217,8 @@ body h2 {
   display: grid;
   align-items: center;
   cursor: pointer;
+  margin: 0% -10% 0% 0%;
+
 }
 #basket-counter 
 {
@@ -203,10 +233,11 @@ body h2 {
     font-weight: 700;
     border-radius: 9px 9px 9px 9px;
 }
-/* .container-bar .logo
+.container-bar .logo
 {
-  margin-right: -35px;
-} */
+  /* margin-right: -35px; */
+  margin: 0% 0% 0% -15%;
+}
 .container-bar ul 
 {
   display: inline-flex;
@@ -429,6 +460,7 @@ color: grey;
  border-radius: 15px;
  cursor: pointer;
  transition: all 3s;
+
 }
 .small-img {
 display: flex;
